# speedX-backend

./: .dockerignore  .env.example  .gitignore  DEFAULT_USERS.md  DEPLOYMENT.md  README.md  generate_secret.py  pyproject.toml  render.yaml  requirements.txt  start.sh
app/: database.py  main.py
app/core/: security.py
app/models/: extraction_job.py  users.py  users_consumption.py
app/routes/: api.py  auth.py  extractor.py
app/schemas/: extractor.py  users.py
app/services/auth/: auth.py
app/services/email/: email_service.py
app/services/excel/: generator.py
app/services/llm/: extractor.py
app/utils/: logs.py
scripts/: create_users.py
